 ** (r391) Added the debuff that results from being the the target of a warrior who casts intimidating shout with the glyph
 ** (r396) Buff/debuff icons should now set an ID as their spell checked rather than a name, allowing them to function more completely with the hyperlink feature of r395
 ** (r396) Animations inherited by a meta icon should now properly cancel when the meta icon changes to an icon with no animations.

===v4.7.3===
 * New Feature: Animations. You can now pick animations to play when an icon event occurs, such as having the screen shake or an icon flash.
 * All event outlets have a "Play" button that you can test the event with.
 * You can now change the "Show Timer Text" option if LUI is the only addon enabled that can handle cooldown timer texts.
 * Changed the "Hide when slot is empty" to include hiding the icon if the slot being checked contains a shield or off-hand frill.
 * Implemented the "Failed Conditions" opacity setting for meta icons.
 * Slightly reworked the import dropdown to more accurately detect the group being edited, and to disallow importing of a data type where that data type is not being edited.
 * Added buttons to the icon editor to allow easy switching between recently edited icons.
 * Added suggestions for text substitutions.
 * Bug Fixes:
 ** (r356) Attempted a fix for default.lua:70 attempt to concatenate global 'input' (a table value)
 ** (r358) Icons tracking multiple elements whose start times are exactly the same should now properly update their timers when the first element gives yield to the second after timer expiration.
 ** (r358) Attempted a fix for TellMeWhen_Options.lua:2163: attempt to index upvalue 'HELP' (a nil value)
 ** (r360) If a meta icon is directly checking another meta icon, and the meta icon being checked changes the icon that is is checking, the meta icon checking the other meta icon should now properly update its inherited settings.